# mlops-s222937

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.dvc  pyproject.toml  requirements.txt  requirements_tests.txt
.dvc/: config
.github/workflows/: codecheck.yml  tests.yml
dockerfiles/: predict.dockerfile  trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops-s222937/: __init__.py
src/: predict_model.py  requirements.txt  sweep.yaml  train_model.py  train_model_lightning.py  train_model_sweep.py
src/config/: default_config.yaml
src/config/training/: training_conf.yaml
src/data/: make_dataset.py
src/models/: model.py
src/visualizations/: visualize.py
tests/: test_data.py  test_model.py  test_training.py
