[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-s222937"
version = "0.0.1"
description = "Repository for the MLOPS individual exercises"
authors = [
  { name = "s222937", email = "your@email.com" },
]

readme = "README.md"
requires-python = "~=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
select = ["I"]
